--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
-        run: ELECRON_SKIP_BINARY_DOWNOAD=1 npm ci
+        run: npm ci
 
       - name: Check lint
         run: npm run lint
