--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
   },
   "dependencies": {
     "crypto-js": "4.0.0",
-    "electron-log": "4.3.4",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
     "sharp": "^0.28.1"
@@ -105,6 +104,7 @@
     "cross-env": "7.0.3",
     "electron": "12.0.5",
     "electron-builder": "22.10.5",
+    "electron-log": "^4.3.5",
     "electron-reload": "1.5.0",
     "eslint": "7.25.0",
     "eslint-plugin-import": "2.22.1",
