--- a/package.json
+++ b/package.json
@@ -28,20 +28,18 @@
     "postinstall": "electron-builder install-app-deps",
     "ng": "ng",
     "dev": "npm-run-all -p electron:serve ng:dev",
-    "start": "npm-run-all -p electron:serve ng:serve",
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
     "ng:dev": "ng serve --hmr -c dev",
-    "ng:serve": "ng serve -c web",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
-    "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
+    "electron:serve": "wait-on tcp:4200 && etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
-    "electron:pack": "npm run build:prod && electron-builder --dir",
-    "electron:build": "npm run build:prod && npm run electron:serve-tsc && electron-builder build",
+    "electron:pack": "npm run build:prod && etan buile --dir",
+    "electron:build": "npm run build:prod && etan build",
     "electron:lint": "eslint \"electronConfig/**/*.ts\"",
-    "debug": "npm run electron:serve-tsc && electron-builder build",
-    "release": "electron-builder  --publish always",
+    "debug": "etan build",
+    "release": "etan build  --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
@@ -49,7 +47,8 @@
     "lint": "ng lint",
     "pretty-quick": "pretty-quick --staged",
     "prettier": "prettier -c --write '**/*'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "help": "etan build --publish always"
   },
   "dependencies": {
     "crypto-js": "4.0.0",
@@ -60,7 +59,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
-    "@angular-devkit/build-angular": "0.1102.11",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular-eslint/builder": "4.2.0",
     "@angular-eslint/eslint-plugin": "4.2.0",
     "@angular-eslint/eslint-plugin-template": "4.2.0",
@@ -79,6 +78,8 @@
     "@angular/router": "11.2.12",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@etanjs/cli": "^1.0.1",
+    "@etanjs/node-find-files": "^1.0.1",
     "@ngrx/effects": "11.1.1",
     "@ngrx/store": "11.1.1",
     "@ngrx/store-devtools": "11.1.1",
