--- a/package.json
+++ b/package.json
@@ -28,18 +28,17 @@
     "postinstall": "electron-builder install-app-deps",
     "ng": "ng",
     "dev": "npm-run-all -p electron:serve ng:dev",
-    "build": "npm run electron:serve-tsc && ng build --base-href ./",
+    "build": "ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
     "ng:dev": "ng serve --hmr -c dev",
-    "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
-    "electron:pack": "npm run build:prod && etan buile --dir",
+    "electron:pack": "npm run build:prod && etan build --dir",
     "electron:build": "npm run build:prod && etan build",
     "electron:lint": "eslint \"electronConfig/**/*.ts\"",
     "debug": "etan build",
-    "release": "etan build  --publish always",
+    "release": "etan build --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
@@ -78,7 +77,7 @@
     "@angular/router": "11.2.12",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "@etanjs/cli": "^1.0.1",
+    "@etanjs/cli": "^1.0.2",
     "@etanjs/node-find-files": "^1.0.1",
     "@ngrx/effects": "11.1.1",
     "@ngrx/store": "11.1.1",
