--- a/package.json
+++ b/package.json
@@ -28,19 +28,15 @@
     "postinstall": "electron-builder install-app-deps",
     "ng:dev": "ng serve --hmr -c dev",
     "ng:build": "ng build --base-href ./",
-
-    "dev": "npm-run-all -p electron:serve ng:dev",
+    "dev": "npm-run-all -p ng:dev  electron:serve ",
     "build": "npm-run-all -p build:prod electron:tsc",
-
     "build:dev": "npm run ng:build -- -c dev",
     "build:prod": "npm run  ng:build  -- -c production",
-    
     "electron:tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && etan build --dir",
     "electron:build": "npm run build && etan build",
-    
     "debug": "etan build",
     "release": "etan build --publish always",
     "test": "ng test --watch=false",
@@ -125,7 +121,7 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "mocha": "8.3.2",
-    "ng-zorro-antd": "11.4.1",
+    "ng-zorro-antd": "11.4.2",
     "npm-run-all": "4.1.5",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
