--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "fsevents": "*"
   },
   "dependencies": {
+    "@etanjs/node-find-files": "1.0.3",
     "crypto-js": "4.0.0",
+    "electron-updater": "4.3.9",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
     "sharp": "0.29.1"
@@ -78,7 +80,6 @@
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@etanjs/cli": "^1.0.2",
-    "@etanjs/node-find-files": "^1.0.1",
     "@ngrx/effects": "11.1.1",
     "@ngrx/store": "11.1.1",
     "@ngrx/store-devtools": "11.1.1",
@@ -104,10 +105,9 @@
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.11.1",
     "cross-env": "7.0.3",
-    "electron": "12.0.5",
-    "electron-builder": "22.10.5",
+    "electron": "15.1.2",
+    "electron-builder": "22.13.1",
     "electron-reload": "1.5.0",
-    "electron-updater": "4.3.9",
     "eslint": "7.25.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "32.3.3",
