--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /release
 main.js
 src/**/*.js
-!src/assets/**/*.js
+!src/renderer/assets/**/*.js
 electronConfig/**/*.js
 !src/karma.conf.js
 *.js.map
