--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "cross-env": "7.0.3",
     "electron": "15.1.2",
     "electron-builder": "22.13.1",
+    "electron-log": "4.4.1",
     "electron-reload": "1.5.0",
     "eslint": "7.25.0",
     "eslint-plugin-import": "2.22.1",
