--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:dev": "npm run ng:build -- -c dev",
     "build:prod": "npm run  ng:build  -- -c production",
     "electron:tsc": "tsc -p tsconfig.serve.json",
-    "electron:serve": "wait-on tcp:4200 && etan start -w",
+    "electron:serve": "wait-on tcp:4200 && cross-env XDG_CURRENT_DESKTOP='serve' etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && etan build --dir",
     "electron:build": "npm run build && etan build",
@@ -39,7 +39,7 @@
     "release": "etan build --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
-    "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
+    "e2e": "cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "lint": "ng lint",
     "pretty-quick": "pretty-quick --staged",
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@etanjs/node-find-files": "1.0.3",
+    "@types/chai": "4.2.22",
     "crypto-js": "4.0.0",
     "electron-updater": "4.3.9",
     "execa": "5.0.0",
