--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:dev": "npm run ng:build -- -c dev",
     "build:prod": "npm run  ng:build  -- -c production",
     "electron:tsc": "tsc -p tsconfig.serve.json",
-    "electron:serve": "wait-on tcp:4200 && etan start -w",
+    "electron:serve": "wait-on tcp:4200 && cross-env CURRENT_ENV=serve etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && etan build --dir",
     "electron:build": "npm run build && etan build",
@@ -41,7 +41,7 @@
     "test:watch": "ng test",
     "e2e": "cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "lint": "npm run lint:ts && npm run lint:less",
+    "lint": "npm run lint:ts",
     "lint:ts": "ng lint --fix",
     "lint:less": "stylelint \"src/**/*.less\" --fix",
     "prepare": "husky install",
@@ -52,14 +52,13 @@
   },
   "dependencies": {
     "@etanjs/node-find-files": "1.0.3",
-    "@types/chai": "4.2.22",
     "crypto-js": "4.0.0",
     "dotenv": "9.0.2",
+    "electron-log": "4.4.1",
     "electron-updater": "4.3.9",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
-    "sharp": "0.29.1",
-    "stylelint-scss": "4.0.1"
+    "sharp": "0.29.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
@@ -89,6 +88,7 @@
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/ansi-escapes": "4.0.0",
+    "@types/chai": "4.3.0",
     "@types/chalk": "2.2.0",
     "@types/crypto-js": "4.0.1",
     "@types/fs-extra": "9.0.11",
@@ -110,7 +110,6 @@
     "cross-env": "7.0.3",
     "electron": "15.1.2",
     "electron-builder": "22.13.1",
-    "electron-log": "4.4.1",
     "electron-reload": "1.5.0",
     "eslint": "7.25.0",
     "eslint-plugin-import": "2.22.1",
@@ -134,7 +133,7 @@
     "spectron": "14.0.0",
     "stylelint": "14.1.0",
     "stylelint-config-rational-order": "0.1.2",
-    "stylelint-config-recommended-scss": "5.0.2",
+    "stylelint-config-recommended-less": "1.0.1",
     "stylelint-config-standard": "24.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-less": "1.0.1",
